Fix sync 2, reenable wallet connect, remove mixpanel log on prod, fix proposal card title overflow (#421)
* fix sync 2 and reenable wallet connect

* remove mixpanel log on prod

* fix proposal card title

* 3 line

* fix title on single proposal

--- a/apps/frontend/src/index.css
+++ b/apps/frontend/src/index.css
@@ -173,3 +173,7 @@ h6 {
     height: 24px;
   }
 }
+
+iframe[style*="border: none"][style*="position: fixed"][style*="z-index: 9999"][style*="width: 100vw"][style*="height: 110px"][style*="bottom: 0px"][style*="left: 0px"] {
+  z-index: 10001 !important;
+}
